# COMSW4995

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Untitled.ipynb  compileDocs.sh  dconfig  index.md  wave_simulation.ipynb  wavesolver.py
.github/workflows/: cmake.yml
.ipynb_checkpoints/: wave_simulation-checkpoint.ipynb
pages/: COMS4995 Final Presentation (1).pdf:Zone.Identifier  Tutorial.md
src/: helper_func.hpp  main.cpp  wave.cpp
src/CoreAlgorithm/: coeff.hpp  computational.hpp  helper_func.hpp  solver.hpp  solver2.hpp  solver_complex.hpp  source.hpp  wave.cpp
src/CustomLibraries/: np.hpp  np_to_matplot.hpp  wavePlotter.hpp
src/MathFunctions/: FiniteDifferenceWaveSolvers.cpp
src/examples/: wave_solver_with_animation.cpp
src/tests/: Benchmarks.cpp  CoreTests.cpp  MatPlotTest.cpp  newstuff.txt  variadic.cpp
